--- a/browse-master/package.json
+++ b/browse-master/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "format": "prettier --write",
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
   },
@@ -20,7 +20,8 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^2.1.8",
-    "styled-components": "^4.3.0"
+    "styled-components": "^4.3.0",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
