--- a/coupon-master/package.json
+++ b/coupon-master/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.3.0",
     "angular-in-memory-web-api": "~0.11.0",
     "rxjs": "~7.4.0",
+    "scriptjs": "^2.5.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/scriptjs": "0.0.2",
     "copyfiles": "^2.4.1",
     "jasmine-core": "~3.10.0",
     "jasmine-marbles": "~0.8.3",
